# titan-cli

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  INSTALLATION.md  INSTALLATION_GUIDE.md  Makefile  PLUGIN_ARCHITECTURE.md  PR_COMPARISON_ANALYSIS.md  README.md  RELEASE.md  SETUP_RAGNAROK_PROJECTS.md  TAP_ARCHITECTURE.md  bootstrap.sh  index.html  mkdocs.yml  pyproject.toml  registry.json  setup.py  sitemap.xml
plugins/titan-plugin-appstore/: .gitignore  CHANGELOG.md  README.md  __init__.py.bak  pyproject.toml  titan_plugin.py  verify_plugin.py
plugins/titan-plugin-appstore/docs/: ANALYTICS_WORKFLOW.md  CLEANUP_GUIDE.md  HANGS_WITHOUT_XCODE.md  MIGRATION_GUIDE.md  PLUGIN_REGISTRATION.md  QUICKSTART.md  QUICK_START_ANALYSIS.md  STRUCTURE.md  SUMMARY.md  TEST_RESULTS.md  VERSION_ANALYSIS_GUIDE.md
plugins/titan-plugin-appstore/examples/: run_analytics.py
plugins/titan-plugin-appstore/tests/: __init__.py  conftest.py
plugins/titan-plugin-appstore/tests/operations/: __init__.py  test_analysis_operations.py  test_build_operations.py  test_version_operations.py
plugins/titan-plugin-appstore/tests/services/: __init__.py  test_app_service.py  test_build_service.py  test_version_service.py
plugins/titan-plugin-appstore/tests/steps/: test_show_whats_new_preview.py
plugins/titan-plugin-appstore/titan_plugin_appstore/: __init__.py  credentials.py  exceptions.py  plugin.py
plugins/titan-plugin-appstore/titan_plugin_appstore/clients/: __init__.py  appstore_client.py
plugins/titan-plugin-appstore/titan_plugin_appstore/models/: __init__.py  analysis.py  mappers.py  network.py  version_states.py  view.py
plugins/titan-plugin-appstore/titan_plugin_appstore/operations/: __init__.py  analysis_operations.py  build_operations.py  diagnostics_operations.py  product_report_pdf.py  version_operations.py
plugins/titan-plugin-appstore/titan_plugin_appstore/steps/: __init__.py  ai_insights_step.py  analyze_metrics_step.py  analyze_single_version_step.py  analyze_version_with_comparison_step.py  check_and_setup_step.py  check_product_report_dependencies_step.py  create_version_step.py  debug_sales_reports_step.py  display_active_versions_health.py  executive_dashboard_step.py  export_product_report_pdf_step.py  fetch_metrics_step.py  fetch_production_version_step.py  fetch_versions_step.py  generate_analytics_report.py  generate_submission_report.py  product_report_step.py  prompt_version_step.py  request_analytics_single_version_step.py  request_analytics_step.py  select_app_step.py  select_build_per_brand.py  select_product_report_version_step.py  setup_wizard_step.py  show_diagnostics_step.py  show_whats_new_preview.py  submit_for_review.py
plugins/titan-plugin-appstore/titan_plugin_appstore/utils/: __init__.py  brand_detector.py  pdf_report.py
plugins/titan-plugin-appstore/workflows/: active-versions-health.yaml  create-app-version.yaml  executive-dashboard.yaml  product-report.yaml  quick-version-health.yaml  request-analytics-reports.yaml  version-analytics.yaml  version-comparison-report.yaml
plugins/titan-plugin-docker/: AGENTS.md  pyproject.toml
plugins/titan-plugin-docker/tests/: test_plugin.py
plugins/titan-plugin-docker/tests/clients/: test_docker_client.py  test_docker_network.py
plugins/titan-plugin-docker/tests/models/: test_formatting.py  test_mappers.py
plugins/titan-plugin-docker/tests/operations/: test_build_operations.py  test_compose_operations.py  test_container_operations.py
plugins/titan-plugin-docker/titan_plugin_docker/: __init__.py  exceptions.py  plugin.py
plugins/titan-plugin-docker/titan_plugin_docker/clients/: __init__.py  docker_client.py
plugins/titan-plugin-docker/titan_plugin_docker/models/: __init__.py  formatting.py
plugins/titan-plugin-docker/titan_plugin_docker/operations/: __init__.py  build_operations.py  compose_operations.py  container_operations.py
plugins/titan-plugin-docker/titan_plugin_docker/steps/: __init__.py  build_push_images_step.py  compose_down_step.py  compose_status_step.py  compose_up_step.py  disk_usage_step.py  prune_resources_step.py  remove_containers_step.py  select_containers_to_remove_step.py  select_prune_targets_step.py  (+2 more)
plugins/titan-plugin-firebase/: README.md  pyproject.toml
plugins/titan-plugin-firebase/tests/: __init__.py  test_auth.py  test_client.py  test_models.py  test_oauth.py  test_plugin.py  test_remoteconfig_inventory.py  test_steps.py
plugins/titan-plugin-firebase/titan_plugin_firebase/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py  oauth.py  plugin.py
plugins/titan-plugin-git/: AGENTS.md  plugin.json  pyproject.toml
plugins/titan-plugin-git/tests/: conftest.py  test_git_plugin.py
plugins/titan-plugin-git/titan_plugin_git/: exceptions.py  messages.py  plugin.py
plugins/titan-plugin-github/: AGENTS.md  README.md  plugin.json  pyproject.toml
plugins/titan-plugin-github/tests/: conftest.py  test_issue_workflow.py
plugins/titan-plugin-github/titan_plugin_github/: exceptions.py  messages.py  models.py  plugin.py  tools.py  utils.py
plugins/titan-plugin-jira/: AGENTS.md  README.md  plugin.json  pyproject.toml  pytest.ini
plugins/titan-plugin-jira/docs/: custom-templates.md
plugins/titan-plugin-jira/tests/: conftest.py
plugins/titan-plugin-jira/titan_plugin_jira/: constants.py  messages.py  plugin.py  utils.py
plugins/titan-plugin-poeditor/: README.md  pyproject.toml
plugins/titan-plugin-poeditor/titan_plugin_poeditor/: __init__.py  exceptions.py  messages.py  plugin.py
plugins/titan-plugin-slack/: AGENTS.md  pyproject.toml
plugins/titan-plugin-slack/tests/: __init__.py  test_block_formatting.py  test_dm_workflow.py  test_formatting.py  test_message_steps.py  test_oauth.py  test_plugin.py  test_steps.py  test_summary_steps.py  test_summary_workflow.py  test_target_steps.py  test_workflows.py
plugins/titan-plugin-slack/titan_plugin_slack/: __init__.py  block_formatting.py  exceptions.py  formatting.py  messages.py  models.py  oauth.py  plugin.py
(+1108 files in other folders)
