[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-cli"
version = "0.1.0"
description = "Extensible CLI workflow orchestrator"
authors = [
{name = "finxo", email = "finxeto@gmail.com"}, 
{name = "r-pedraza", email = "raulpedrazaleon@gmail.com"}
]
requires-python = ">=3.10"

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "rich>=14.2.0,<15.0.0",
    "tomli>=2.0.0,<3.0.0",        # TOML reading
    "pydantic>=2.0.0,<3.0.0",     # Validation
    "tomli-w>=1.0.0,<2.0.0",      # TOML writing
    "keyring (>=25.7.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "google-auth (>=2.43.0,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
]


[project.scripts]
titan = "titan_cli.cli:app"

[tool.setuptools]
packages = ["titan_cli"]