[tool.poetry]
name = "titan-cli"
version = "1.0.0"
description = "Modular development tools orchestrator - Streamline your workflows with AI integration and intuitive terminal UI"
authors = ["finxo <finxeto@gmail.com>", "r-pedraza <raulpedrazaleon@gmail.com>"]
maintainers = ["r-pedraza <raulpedrazaleon@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/masmovil/titan-cli"
repository = "https://github.com/masmovil/titan-cli"
documentation = "https://github.com/masmovil/titan-cli"
license = "MIT"
keywords = ["cli", "workflow", "orchestrator", "automation", "devtools", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [{include = "titan_cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
typer = ">=0.20.0,<1.0.0"
rich = ">=14.2.0,<15.0.0"
tomli = ">=2.0.0,<3.0.0"
pydantic = ">=2.0.0,<3.0.0"
"tomli-w" = ">=1.0.0,<2.0.0"
keyring = ">=25.7.0,<26.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
anthropic = ">=0.75.0,<0.76.0"
google-generativeai = ">=0.8.5,<0.9.0"
google-auth = ">=2.43.0,<3.0.0"
pyyaml = ">=6.0.3,<7.0.0"
jinja2 = ">=3.1.4,<4.0.0"

titan-plugin-git = {path = "plugins/titan-plugin-git", develop = true}
titan-plugin-github = {path = "plugins/titan-plugin-github", develop = true}
titan-plugin-jira = {path = "plugins/titan-plugin-jira", develop = true}
pyyaml = "^6.0.3"
textual = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
ruff = "^0.14.9"
pytest-json-report = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
titan = "titan_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
