[tool.poetry]
name = "titan-plugin-git"
version = "1.0.0"
description = "Git plugin for Titan CLI"
authors = ["Team Titan CLI"]
packages = [{include = "titan_plugin_git"}]

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."titan.plugins"]
git = "titan_plugin_git.plugin:GitPlugin"

