[tool.poetry]
name = "titan-plugin-git"
version = "1.0.0"
description = "Git plugin for Titan CLI"
authors = ["MasOrange Apps Team <apps-management-stores@masorange.es>"]
packages = [{include = "titan_plugin_git"}]

[tool.poetry.dependencies]
python = ">=3.10"
titan-cli = ">=0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."titan.plugins"]
git = "titan_plugin_git.plugin:GitPlugin"

