[tool.poetry]
name = "titan-plugin-github"
version = "0.1.0"
description = "Titan CLI plugin for GitHub integration."
authors = ["finxo <finxeto@gmail.com>", "r-pedraza <raulpedrazaleon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = ">=0.27.0"

[project.entry-points."titan.plugins"]
github = "titan_plugin_github.plugin:GitHubPlugin"
