[tool.poetry]
name = "titan-plugin-github"
version = "1.0.0"
description = "Titan CLI plugin for GitHub integration."
authors = ["MasOrange Apps Team <apps-management-stores@masorange.es>"]
packages = [{include = "titan_plugin_github"}]

[tool.poetry.dependencies]
python = ">=3.10"
titan-cli = ">=0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."titan.plugins"]
github = "titan_plugin_github.plugin:GitHubPlugin"

