[tool.poetry]
name = "titan-plugin-slack"
version = "1.0.0"
description = "Titan CLI plugin for Slack integration."
authors = ["MasOrange Apps Team <apps-management-stores@masorange.es>"]
packages = [{include = "titan_plugin_slack"}]

[tool.poetry.dependencies]
python = ">=3.10"
titan-cli = ">=0.6.0"
slack-sdk = ">=3.27.0"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-mock = ">=3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."titan.plugins"]
slack = "titan_plugin_slack.plugin:SlackPlugin"
